corrected main content checkbox alignments

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Mulish&display=swap");
 .App {
-  text-align: center;
+  font-family: Mulish;
+  /* text-align: center; */
 }
