--- a/src/component/mainFrame/style.css
+++ b/src/component/mainFrame/style.css
@@ -1,5 +1,10 @@
 .my-sidebar{
-    position:absolute;
+    position:fixed;
     top:0px;
     background-color: black;
+    /* height: 100vh; */
+    overflow: auto;
+}
+.my-wrapper{
+    padding-top:0px !important;
 }
