--- a/src/component/qcDetails/index.css
+++ b/src/component/qcDetails/index.css
@@ -15,7 +15,7 @@ color: #876bf5 - header
     min-height: 600px;
     font-family: Arial, Helvetica, sans-serif;
     text-transform: none;
-    letter-spacing: 1px;
+    letter-spacing: 1px;padding: 10px;
   }
   
   .jio_page {
@@ -25,14 +25,14 @@ color: #876bf5 - header
   }
   
   .jio_row1 {
-    padding: 0px 60px;
+    padding: 0px 15px;
     border: 2px solid #efeeef;
   }
   .j_row1 {
     text-align: center;
     font-size: 24px;
     color: #876bf5;
-    padding: 15px;
+    padding: 15px 0px 0px 0px;
     text-transform: capitalize;
   }
   
@@ -95,10 +95,12 @@ color: #876bf5 - header
     margin: 4px 10px;
     font-size: 10px;
     opacity: 0.5;
+    text-align:left;
   }
   p.j_p4 {
     margin: 4px 10px;
     font-size: 13px;
+    text-align:left;
   }
   
   .j_box2 {
@@ -112,13 +114,13 @@ color: #876bf5 - header
   p.j_p5 {
     font-size: 16px;
     margin: 0px;
-    margin-top: 12px;
+    /* margin-top: 12px; */
     text-transform: uppercase;
   }
   img.call_home {
     width: 18px;
     height: 18px;
-    margin-top: 13px;
+    /* margin-top: 13px; */
     margin-left: 7px;
   }
   
@@ -330,7 +332,7 @@ color: #876bf5 - header
   }
   
   p.j_p16 {
-    margin-left: 30px;
+    margin-left: 40px;
     margin-top: 5px;
     opacity: 0.3;
   }
@@ -338,6 +340,7 @@ color: #876bf5 - header
     position: absolute;
     width: 1.25rem !important;
     height: 1.25rem !important;
+    margin-left: 10px;
   }
   .form-check {
     position: relative;
@@ -362,4 +365,23 @@ color: #876bf5 - header
     color: lightgray;
     font-size: 13px;
   }
-  
+  .j-row-back-btn{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    color: #876bf5;
+    padding-bottom:10px;
+    padding-left: 20px;
+  }
+
+  .j-back-text{
+    margin-left:10px;
+  }
+  .my-call-row{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+
+  }
