--- a/src/component/sidebarContent/style.css
+++ b/src/component/sidebarContent/style.css
@@ -1,6 +1,7 @@
 .sidebarHome {
     position:relative;
     top:10%;
+    padding-left: 20px;
     /* left:10%; */
    
     /* bottom: 54.99%; */
